
 Important Notice: 1) dependency change to Octave>=6.1.0
                   2) `mean` shadows core Octave's respective function
                   3) removed dependency on `io` package
                   4) incompatibility with the `nan` package
 New functions:
 ==============

 ** anova2 (fully Matlab compatible)

 ** cdfcalc, cdfplot

 ** chi2gof (fully Matlab compatible. bug #46764)

 ** f2fx (missing function: bug #48146)

 ** friedman (fully Matlab compatible)

 ** fillmissing (patch #10102)

 ** grpstats (complementary to manova1)

 ** kstest2 (fully Matlab compatible. bug #56572)

 ** libsvmread, libsvmwrite (I/O functions for LIBSVM data files)

 ** manova1 (fully Matlab compatible)

 ** manovacluster (fully Matlab compatible)

 ** mean (fully Matlab compatible, it shadows mean from core Octave)

 ** ranksum (fully Matlab compatible. bug #42079)

 ** standardizeMissing (patch #10102)

 ** svmpredict, svmtrain (wrappers for LIBSVM 3.25)

 ** tiedrank (complementary to ranksum)

 Improvements:
 =============

 ** anovan.m: added more options (patch #10123, Github PR #1)

 ** binopdf.m: implement high accuracy Loader algorithm for m>=10 (bug #34362)

 ** cdf.m: extended to include all available distributions

 ** geomean.m: fully Matlab compatible. (patch #59410)

 ** harmmean.m: fully Matlab compatible.

 ** hygepdf.m: added optional parameter "vectorexpand" to facilitate
    vectorization of other hyge functions. Allows different inputs lengths
    for x and t,m,n parameters, with broadcast expanded output (bug #34363)

 ** hygecdf.m: improved vectorization for non-scalar inputs.
    hygeinv.m
    hygernd.m

 ** ismissing.m: corrects handling of n-D arrays, NaN indicators, and improves
    matlab compatibility for different data types. (patch #10102)

 ** kmeans.m: improved help file, evaluate efficieny (bug #8959)

 ** laplace_cdf.m: allow for parameters mu and scale (bug #58688)
    laplace_inv.m
    laplace_pdf.m
    logistic_cdf.m
    logistic_inv.m